﻿##########################################
官方网站：https://www.pbootcms.com
标签手册：https://www.pbootcms.com/docs.html
版权所有：湖南翱云网络科技有限公司
##########################################

PbootCMS V2.0.1 build 2019-08-15
1、优化编辑器工具栏浮动功能；
2、优化数据库备份文件名称;
3、优化基础环境组件检查功能；
4、修复默认模板一处链接错误；
5、修复API一处提示文字错误；
6、修复内链替换alt、title内容的问题;
7、去除内置测试账号，避免被恶意利用；

PbootCMS V2.0.0 build 2019-08-12
1、全新多种URL地址模式上线，模型、栏目、内容自由后台设置；
2、后台不再依赖pathinfo提高环境兼容性；
3、新增模型下面有栏目时不允许直接删除；
4、调整跨语言区域调用内容不再自动切换区域;
5、新增上下篇preico标签调用缩略图；
6、优化在线更新文件过多时下载问题；
7、优化sitamap生成格式；
8、其他大量系统框架优化及调整;
9、修复个别空间商的兼容性问题；

PbootCMS V1.4.3 build 2019-08-10
1、修复调用指定内容单页链接指向错误问题；
2、优化调整模板引擎链接生成过程；
3、优化在线更新功能；
4、新增升级到2.X分支版本的通道；
5、其他问题修复与优化；

PbootCMS V1.4.2 build 2019-07-22
1、修复内容tags为空时也有代码输出问题；
2、新增文章内链替换次数系统配置参数；
3、新增修改栏目时可选同步修改子栏目模板的功能；
4、新增批量添加栏目功能；
5、新增自定义表单添加到左侧导航菜单功能；
6、修复角色修改时区域数量显示不全问题；
7、修复IE浏览器翻页兼容性问题；
8、优化调整内链替换为长关键字优先；
9、新增连续多次登录失败后锁定IP功能；
10、新增自动记住上次添加内容栏目功能；
11、修复一处可能被利用的安全漏洞（感谢stick.wang@Zionlab）
12、新增表单提交验证码独立开关并优化邮箱提醒标题；
13、其他问题修复与优化；

PbootCMS V1.4.1 build 2019-07-12
1、扩大自定义字段默认长度；
2、升级layui为最新版本；
3、修复后台IE浏览器部分兼容性问题；
4、修复新增区域无法绑定域名问题；
5、修复图片无法拖动排序问题；
6、修复单独修改用户角色不成功问题；
7、修复微信分享参数导致安全拦截提示问题；
8、修复登录失败时验证码不刷新问题；
9、修复编辑器未能按设置大小缩放图片问题；
10、优化合并邮箱配置功能到系统配置；
11、增加会话文件路径后台切换功能；
12、新增单页模型也在左侧导航中显示；
13、新增文章图片水印功能；
14、新增文章内容内链功能；
15、其他问题修复与优化；

PbootCMS V1.4.0 build 2019-06-07
1、修复部分浏览器多图无法删除的问题；
2、新增万能授权码填写后自动后台隐藏功能；
3、修复QQ中打开搜索页面附加参数导致错误问题；
4、修复后台密码泄露后系统配置可能构成的安全问题；

PbootCMS V1.3.9 build 2019-05-15
1、优化相关目录权限不足报错机制；
2、修复PHP56有时后台更新无法使用问题；
3、优化后台在线升级功能；
4、新增中文路径部署检测；
5、优化升级系统框架模板引擎；
6、新增自定义路由正则匹配的支持；
7、新增后台配置数字分页条数量；
8、其他问题修复与优化；

PbootCMS V1.3.8 build 2019-04-12
1、新增同时支持fsockopen及stream_socket_client发送邮件；
2、优化邮件发送失败错误提示信息；
3、新增手机版绑定域名后自动跳转到对应域名地址上；
4、修改会话文件默认为使用系统环境缓存路径；
5、修复mysqli配置文件读取端口不一致问题；
6、修复tags为空时仍然会输出代码字符问题；
7、修复开启缓存功能后异样地址会导致文件产生问题；
8、修复编辑器在PHP7下多图上传名字重复问题；
9、修复编辑器多图上传位置错乱问题；

PbootCMS V1.3.7 build 2019-03-12
1、修复部分情况数据库语句执行发生的错误不能正常显示的问题；
2、修复搜索时表单传递字段控制被过滤掉的问题；
3、新增多个搜索通过传递searchtpl字段自定义不同搜索结果页模板；