@@ -4,7 +4,7 @@ return array(
     'app_version' => '2.0.2',
     
     // 发布时间
-    'release_time' => '20190823',
+    'release_time' => '20190915',
     
     // 修订版本
     'revise_version' => '0'
