@@ -4,6 +4,11 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V2.0.2 build 2019-09-15
+1、伪静态时不允许再访问普通模式地址；
+2、新增xx:ispics判断是否有多图;
+3、其他问题修复与优化；
+
 PbootCMS V2.0.1 build 2019-08-15
 1、优化编辑器工具栏浮动功能；
 2、优化数据库备份文件名称;
